--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -20,4 +20,8 @@
   width: 80px;
   height: 80px;
   border: 1px solid black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 40px;
 }
